sundaland-frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sundaland-frontend
  namespace: sundaland
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: frontend.sundaland.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sundaland-frontend
            port:
              number: 8080
